--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "apollo-link-http": "^1.3.3",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
