--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "apollo-boost": "^0.1.1",
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-client": "^2.2.5",
+    "apollo-link": "^1.1.0",
+    "apollo-link-context": "^1.0.5",
+    "apollo-link-error": "^1.0.5",
     "apollo-link-http": "^1.3.3",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
