--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link-http": "^1.3.3",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
+    "jwt-decode": "^2.2.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "prop-types": "^15.6.0",
