--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.5",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.2",
     "prop-types": "^15.6.0",
