--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-context": "^1.0.5",
     "apollo-link-error": "^1.0.5",
     "apollo-link-http": "^1.3.3",
+    "formik": "^0.11.11",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
     "jwt-decode": "^2.2.0",
