--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apollo-link-context": "^1.0.5",
     "apollo-link-error": "^1.0.5",
     "apollo-link-http": "^1.3.3",
+    "apollo-link-ws": "^1.0.7",
+    "apollo-utilities": "^1.0.8",
     "formik": "^0.11.11",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.7.3",
@@ -25,7 +27,8 @@
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.78.2",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "subscriptions-transport-ws": "^0.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
