--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link-http": "^1.5.3",
     "apollo-link-ws": "^1.0.7",
     "apollo-utilities": "^1.0.10",
+    "downshift": "^1.31.4",
     "formik": "^0.11.11",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
