--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.9",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
